--- a/stylesheet.css
+++ b/stylesheet.css
@@ -88,7 +88,8 @@
     position: absolute;
     top: 10px;
     right: 50%;
-    transform: translate(-50%);
+    width: auto !important;
+    transform: translate(50%);
   }
   .fa-search {
     top: -24px;
